Resolved a bug where content like text would go outside grid or the container, wraps on multiple lines now*

--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,6 @@ a{
   max-width: 300px;
   height: auto;
 }
+.text--wrapped{
+  word-wrap: break-word;
+}
